fix: Update environment variable syntax in Docker Compose and improve application configuration